assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Delius+Swash+Caps&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400&display=swap");

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
}

/*-------------------------------------------------------- Background colors */

.menu-bar {
    background-color: #FECCC2;
}

.white-section {
    background-color: #fff;
}

.grey-section {
    background-color: #f2f0f1;
}

#enquiry-form {
    background-color: #f2f0f1;
}

.image-gallery {
    background-color: #f2f0f1;
}

/*-------------------------------------------------------- Sections styles */

.white-section {
    padding: 50px 80px;
}

.grey-section {
    padding: 50px 80px;
}

/*-------------------------------------------------------- Font & font styles */

.navbar-brand {
    font-size: 30px;
    text-transform: uppercase;
    font-family: "Delius Swash Caps", sans-serif;
    letter-spacing: 1px;
    padding-left: 10px;
}

.nav-link {
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
}

footer p {
    font-family: "Open Sans", sans-serif;
    color: dimgrey;
    font-size: 14px;
}

footer span {
    font-family: "Open Sans", sans-serif;
    color: black;
    font-size: 14px;
}

#hero-text h1 {
    font-family: "Delius Swash Caps", sans-serif;
    color: white;
}

#hero-text p {
    font-family: "Open", sans-serif;
    color: white;
    font-size: 25px;
}

.section-heading{
    font-family: "Delius Swash Caps", sans-serif;
    color: black;
    padding-bottom: 40px;
    padding-top: 30px;
    font-size: 28px;
}

.benefit-heading{
    font-family: "Open Sans", sans-serif;
    color: darkgrey;
    font-size: 25px;
}

.sub-heading {
    font-family: "Delius Swash Caps", sans-serif;
    color: black;
}

.header-text h1 {
    font-family: "Delius Swash Caps", sans-serif;
    color: white;
}

.header-text p {
    font-family: "Open Sans", sans-serif;
    color: white;
    font-size: 25px;
}

.class-info h3 {
    font-family:"Delius Swash Caps", sans-serif;
}

.class-info h4 {
    font-family: "Open Sans", sans-serif;
    color: dimgrey;
    font-size: 20px;
}

/*-------------------------------------------------------- Button styles */

.btn-secondary {
    color: #fff;
}

.gallery-btn {
    padding-bottom: 30px;
}

/*-------------------------------------------------------- Navbar */

.menu-bar {
    color: dimgrey;
    padding: 5px 10px;
}

.nav-link:hover {
    color: black !important;
}

/*-------------------------------------------------------- Footer */
/*--Code for sticky footer from https://startbootstrap.com/snippets/sticky-footer-flexbox*/

#sticky-footer {
    flex-shrink: 0;
    background-color: #FBD8D1;
    color: dimgrey;
    padding-top: 20px;
    padding-left: 20px;
    padding-bottom: 20px;
}

#page-content {
  flex: 1 0 auto;
}

#sticky-footer a{
    color: dimgrey;
}

#sticky-footer a:hover{
color: black;
}

.social-icons {
    padding-bottom: 20px;
}

.social-icons i{
    padding: 10px;
}

/*-------------------------------------------------------- HOME Hero Image*/
/*Used https://stackoverflow.com/questions/47606246/center-positioning-text-in-hero-div to help with hero image and hero text code and also header images and text on all other pages */

#hero-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/heroimage.jpg");
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 680px;
}

#hero-text {
    align-items: center;
    justify-content: center;
    position: relative;
    text-align: center;
    padding-top: 270px;
}

/*-------------------------------------------------------- HOME Benefits of learning Macrame section*/

.benefits {
    padding-left: 10px;
    padding-right: 10px;
}

/*-------------------------------------------------------- HOME Upcoming online classes preview on homepage */

.upcoming-classes-feature {
    padding-top: 50px;
    padding-bottom: 50px;
}

.card {
    margin-top: 30px;
    margin-bottom: 40px;
}

/*-------------------------------------------------------- HOME Gallery preview on homepage */

.gallery-item {
    width: 286px;
    padding-right: 15px;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-top: 30px;
    margin-bottom: 40px;
}

/*-------------------------------------------------------- CLASSES Header image */

.classes-header-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.25)), url("../images/classesheaderimage.jpg");
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 50vh;
    position:relative;
 }

.header-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/*-------------------------------------------------------- CLASSES Intro */

.intro-text {
    padding-right: 30px;
    padding-left: 30px;
}

/*-------------------------------------------------------- CLASSES List of upcoming classes */

#classes-list {
    padding: 20px 25px;
}
.class-image {
    padding-top: 20px;
    padding-bottom: 20px;
}

.class-info {
    margin: auto;
    padding: 15px;
}

hr {
  border-top: 3px solid #FECCC2;
  width: 30%;
  margin: 0 auto;
  padding: 20px;
}

/*-------------------------------------------------------- CLASSES Enquiry form */

#enquiry-form {
    padding: 20px 10px;
}

.form-style {
    width: 600px;
    padding: 15px;
}

/*-------------------------------------------------------- GALLERY Header Image */

.gallery-header-image {
    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.25)), url("../images/galleryheaderimage.jpg");
    width: 100%;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 50vh;
    position:relative;
 }

.gallery-intro a{
    color: darkgrey;
}

.gallery-intro a:hover{
    color:black;
}

/*----Code for image gallery from https://www.w3schools.com/css/tryit.asp?filename=trycss_image_gallery_responsive */

div.gallery {
  background-color: white;
  border: 1px solid #ccc;
}

div.gallery:hover {
  border: 1px solid #777;
}

div.gallery img {
  width: 100%;
  height: auto;
}

div.desc {
  padding: 15px;
  text-align: center;
}

* {
  box-sizing: border-box;
}

/*----Code to make the gallery responsive also from w3schools */

.responsive {
  padding: 0 6px;
  float: left;
  width: 24.99999%;
}

@media only screen and (max-width: 700px) {
  .responsive {
    width: 49.99999%;
    margin: 6px 0;
  }
}

@media only screen and (max-width: 500px) {
  .responsive {
    width: 100%;
  }
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

.image-gallery {
    padding-top: 10px;
    padding-bottom: 40px;
}

.image-gallery-row {
    margin: 20px;
}

/*-------------------------------------------------------- CONTACT Header image */

.contact-header-image {
 background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.20)), url("../images/gallery10.jpg");
 width: 100%;
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 height: 50vh;
 position:relative;
 }

.contact-form {
    padding: 20px 10px;
}

#myBtn {
  display: none;
  position: fixed;
  bottom: 20px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  border: none;
  outline: none;
  background-color: darkgrey;
  color: white;
  cursor: pointer;
  padding: 15px;
  border-radius: 4px;
}

#myBtn:hover {
  background-color: #555;
}

/*-------------------------------------------------------- Media queries */

@media screen and (max-width: 576px) {
  .white-section {
        padding-right: 10px;
        padding-left: 10px;
    }

  .grey-section {
        padding-right: 10px;
        padding-left: 10px;
    }

  .navbar-brand {
        font-size: 25px;
        padding-left: 5px;
    }

   #hero-text h1 {
        font-size: 32px;
    }

   #hero-text p {
        font-size: 20px;
    }

   .section-heading {
       font-size: 24px;
    }

   .section-heading-classes {
        font-size: 25px;
    }

    .benefit-item {
        padding-left: 20px;
        padding-right: 20px;
    }

    .header-text h1 {
        font-size: 32px;
    }

    .class-info h3 {
        font-size: 25px;
    }
    .form-style {
        width: 300px;
    }
}

